add more native error handling, fix crashes, add in-place allocation